04 神经网络的学习 done

--- a/03-神经网络/03-神经网络.md
+++ b/03-神经网络/03-神经网络.md
@@ -64,7 +64,7 @@ softmax函数的计算步骤：
 
 # 手写数字识别
 见mnist.py
-分为训练、测试数据，数据又分为图像、标签，2 * 2 = 4。因此load_mnist()返回4个数据。
+分为训练数据（又称监督数据）、测试数据，数据又分为图像、标签，2 * 2 = 4。因此load_mnist()返回4个数据。
 每张图片是28 * 28 = 784个像素。因此，训练数据的形状为 (60000, 784) ，测试数据的形状为 (10000, 784) 。
 意思是60000张训练图像，10000张测试图像。
 ---------打印mnist数据 各长度---------
