--- a/04-神经网络的学习/04-神经网络的学习.md
+++ b/04-神经网络的学习/04-神经网络的学习.md
@@ -51,6 +51,23 @@ lr分别设为0.01、0.1、10，计算100次，得出的结果是
 
 权重参数是通过训练数据和学习算法自动获得的，学习率这样的超参数则是人工设定的。
 
+# 用数值微分求梯度 训练神经网络
+代码见train_neuralnet.py，准确率变化见图 识别准确率变化.png
+- 梯度算法为数值微分（第五章会改用随机梯度下降法，以进行比较）
+- learning_rate = 0.1 ：学习率固定为0.1
+- iters_num = 10000 ：总共进行10000次迭代训练
+- batch_size = 100 ：每次迭代随机选取100张图片作为一个批次
+- batch_mask = np.random.choice(train_size, batch_size) ：使用numpy的random.choice函数从训练集（大小为train_size）中随机选择100个样本的索引
+
+准确率前期提升很快，到了90%之后，提升幅度就很小。
+原因是学习率过大，导致权重参数在正确的更新方向上过大，从而发散而不是收敛。
+
+第7800次 打印train acc : 0.9413, test acc : 0.9404
+第8400次 打印train acc : 0.9436, test acc : 0.9412
+第9000次 打印train acc : 0.9450, test acc : 0.9429
+第9600次 打印train acc : 0.9464, test acc : 0.9441
+
+
 # 学习算法的实现
 神经网络学习分为四个步骤：
 1. 小批量（mini-batch） 从训练数据中随机选出一部分数据
