--- a/04-神经网络的学习/04-神经网络的学习.md
+++ b/04-神经网络的学习/04-神经网络的学习.md
@@ -62,6 +62,13 @@ lr分别设为0.01、0.1、10，计算100次，得出的结果是
 准确率前期提升很快，到了90%之后，提升幅度就很小。
 原因是学习率过大，导致权重参数在正确的更新方向上过大，从而发散而不是收敛。
 
+--------------------数值微分 求梯度--------------------
+跑不起来，cpu%100，风扇咔咔转，计算量太大了。
+AI：相比数值微分，反向传播算法对训练效率的巨大提升
+- 相比简单实现,反向传播使基于梯度下降的训练速度提高了百万倍以上
+- 这意味着可以在一周内完成以往需要几十万年的模型训练任务
+
+--------------------误差反向法 手动计算 求梯度--------------------
 代码执行5次，最终识别准确率0.94。回显分别为：
 第9600次 打印train acc : 0.9464, test acc : 0.9441
 第9600次 打印train acc : 0.9465, test acc : 0.9447
