--- a/06-与学习相关的技巧/06-与学习相关的技巧.md
+++ b/06-与学习相关的技巧/06-与学习相关的技巧.md
@@ -29,9 +29,16 @@ Adam 是Momentum和AdaGrad的结合。
 
 但是，（目前）并不存在能在所有问题中都表现良好的方法。这4种方法各有各的特点，都有各自擅长解决的问题和不擅长解决的问题。所以需要根据具体问题，选择合适的方法。
 
+# 这4种方法的比较
+我们还是以mnist图像集合为例，比较这4种方法的学习过程。
+代码见optimizer_compare_mnist.py
+学习情况对比见optimizer_compare_mnist.png
+
 # 2. 权重的初始值
 学习过程中，合理的权重初始值很重要。
 之前实现的mnist数据集，以下是不同的初始值，学习过程。见不同权重 mnist学习过程.png
+针对mnist图像集，不同的初始值，学习的结果对比。
+weight_init_compare.py、weight_init_compare.png
 
 # 3. Batch Normalization
 之前学到Normalization，是指把输入值进行正规化，把值限定到一定范围。如果这个范围是0到1，就称为归一化。
@@ -43,6 +50,7 @@ Batch Norm,就是以进行学习时的mini-batch为单位，进行正规化。
 - 初始值的设定更加容易（对于初始值不用那么神经质）
 
 初始值选得很好时，使用Batch Norm对于训练的优化效果不大。
-但是，在选得很糟糕时，使用Batch Norm，效果会很好。见图片 Batch Norm效果.png
+但是，在选得很糟糕时，使用Batch Norm，效果会很好。
+见batch_norm_test.py、batch_norm_test.png
 
 # 4 过拟合
